--- a/.gitignore
+++ b/.gitignore
@@ -307,4 +307,5 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
 
-.models/
+# ignore models
+!models/
